Fixed distorted images

--- a/src/components/Search/Map/Map.css
+++ b/src/components/Search/Map/Map.css
@@ -8,6 +8,7 @@
 }
 
 .user_pic {
+  object-fit: cover;
   border-radius: 50%;
 }
 
