--- a/src/components/Search/list/User.css
+++ b/src/components/Search/list/User.css
@@ -15,6 +15,7 @@
   width: 200px;
   overflow:hidden;
   border-radius: 50%;
+  object-fit: cover;
 }
 .card {
   display:inline-block;
